--- a/telemetrygen.yaml
+++ b/telemetrygen.yaml
@@ -1,10 +1,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: telemetrygen-job
+  name: ${SERVICE_NAME}
 spec:
-  parallelism: ${PARALLELISM}
-  completions: ${COMPLETIONS}
+  parallelism: 1
+  completions: 1
+  ttlSecondsAfterFinished: 5
   template:
     metadata:
       labels:
@@ -12,7 +13,7 @@ spec:
     spec:
       containers:
       - name: telemetrygen
-        image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:latest
+        image: ttl.sh/isracosa:latest
         env:
           - name: POD_NAME
             valueFrom:
@@ -22,14 +23,14 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
-          - name: OTEL_EXPORTER_OTLP_ENDPOINT
-            value: "$(NODE):4317"
         args:
           - "traces"
           - "--otlp-insecure"
-          - "--rate=500"
-          - "--duration=${DURATION}"
-          - "--service" # This sumulates a different service for each pod
-          - "$(POD_NAME)"
+          - "--child-spans=10"
+          - "--rate=10"
+          - "--traces=100"
+          - "--otlp-http"
+          - "--otlp-endpoint=$(NODE):4318"
+          - "--service=${SERVICE_NAME}"
       restartPolicy: Never
   backoffLimit: 0
